# cerpton

./: .gitignore  Cargo.toml  README.md  alphabet.txt  build.rs
.github/workflows/: build-test.yml  test-and-build.yml
src/: alphabet.rs  decode.rs  encode.rs  lib.rs  main.rs  tests.rs  utf.rs
tools/add_alphabet/: Cargo.toml
tools/add_alphabet/src/: main.rs
