# By Nathan McMillan (2023)
[package]
name = "cerpton"
version = "0.1.0"
edition = "2021"
authors = ["Nathan McMillan <nathanmcmillan54@gmail.com>"]
description = "A double Caesar Cypher."
documentation = "https://docs.rs/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/NathanMcMillan54/cerpton/"

[lib]
name = "cerpton"
edition = "2021"
path = "src/lib.rs"

[dependencies]
encoding_rs = "0.8.32"
