# By Nathan McMillan (2023)
[package]
name = "cerpton"
version = "0.1.1"
edition = "2021"
authors = ["Nathan McMillan"]
description = "A 'double' Caesar Cypher."
documentation = "https://docs.rs/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/NathanMcMillan54/cerpton/"

[lib]
name = "cerpton"
edition = "2021"
path = "src/lib.rs"

[workspace]
members = [ "tools/add_alphabet",
    "tools/add_alphabet/"
]

[dependencies]
encoding_rs = "0.8.32"
